testsuite/poke.pkl/acons-diag-10.pk
/* { dg-do compile } */

any[3#B] (); /* { dg-error ".*\n.*not supported" } */
